# diffusion-bot

./: .gitignore  Makefile  all-outputs  pyproject.toml  shell.nix
src/: main.py
src/bot/: args.py  args_test.py
