[tool.poetry]
name = "gui-diff"
version = "0.1.0"
description = ""
authors = ["Max Gonzih <gonzih@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
diffusers = "^0.3.0"
huggingface = "^0.0.1"
transformers = "^4.22.2"
ftfy = "^6.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
